replace assertTrue